split iam
